[package]
name = "pretty-exec-lib"
description = "Print a command and then execute it"
version = "0.2.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
edition = "2021"
keywords = ["spawn", "subprocess", "command"]
repository = "https://github.com/KSXGitHub/pretty-exec.git"
readme = "README.md"

[dependencies]
is-terminal = "^0.3.0"
nu-ansi-term = "^0.46.0"
shell-escape = "^0.1.5"
derive_more = "^0.99.17"
typed-builder = "^0.10.0"
thiserror = "^1.0.34"
clap = { version = "3.2.20", features = ["derive"] }
clap-utilities = "0.1.0"
pipe-trait = "^0.4.0"

[dev-dependencies]
itertools = "^0.10.4"
pretty_assertions = "^1.3.0"
maplit = "^1.0.2"
