[package]
name = "pretty-exec-lib"
description = "Print a command and then execute it"
version = "0.5.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
edition = "2021"
keywords = ["spawn", "subprocess", "command"]
repository = "https://github.com/KSXGitHub/pretty-exec.git"
readme = "README.md"

[dependencies]
is-terminal = "^0.4.3"
yansi = "^0.5.1"
shell-escape = "^0.1.5"
derive_more = "^0.99.17"
typed-builder = "^0.12.0"
thiserror = "^1.0.38"
clap = { version = "^4.0.32", features = ["derive"] }
clap-utilities = "^0.2.0"
pipe-trait = "^0.4.0"

[dev-dependencies]
itertools = "^0.10.5"
pretty_assertions = "^1.3.0"
maplit = "^1.0.2"
