[package]
name = "pretty-exec"
description = "Print a command and then execute it"
version = "0.0.35"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
edition = "2018"
keywords = ["spawn", "subprocess", "command"]
categories = ["command-line-utilities"]
repository = "https://github.com/KSXGitHub/pretty-exec.git"
readme = "README.md"

[lib]
name = "pretty_exec"
path = "src/lib.rs"

[[bin]]
name = "pretty-exec"
path = "src/main.rs"

[[bin]]
name = "pretty-exec-completions"
path = "src/completions.rs"

[dependencies.pretty-exec-lib]
version = "0.0.35"
path = "../pretty-exec-lib"

[dev-dependencies]
ansi_term = "^0.12.1"
toml = "^0.5.8"
serde_json = "^1.0.61"
pipe-trait = "^0.2.1"

[dev-dependencies.serde]
version = "^1.0.119"
features = ["derive"]
