[package]
name = "pretty-exec"
description = "Print a command and then execute it"
version = "0.5.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
edition = "2021"
keywords = ["spawn", "subprocess", "command"]
categories = ["command-line-utilities"]
repository = "https://github.com/KSXGitHub/pretty-exec.git"
readme = "README.md"

[lib]
name = "pretty_exec"
path = "src/lib.rs"

[[bin]]
name = "pretty-exec"
path = "src/main.rs"

[[bin]]
name = "pretty-exec-completions"
path = "src/completions.rs"

[dependencies.pretty-exec-lib]
version = "0.5.0"
path = "../pretty-exec-lib"

[dev-dependencies]
yansi = "^0.5.1"
toml = "^0.7.2"
serde_json = "^1.0.94"
pipe-trait = "^0.4.0"
serde = { version = "^1.0.152", features = ["derive"] }
